<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CollegeBarter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image_desc">Fragment Icon</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign In</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="item_desc_label">Description: </string>
    <string name="item_desciption"> The Item Description </string>
    <string name="item_price_text">Price: $ </string>
    <string name="item_price_value">100</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="user_logIn">Log In</string>
    <string name="user_signUp">SignUp</string>
    <string name="Email">Email</string>
    <string name="title_activity_cart_fragment">CartFragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="error_message">Invalid Username or Password!</string>
    <string name="sign_out">Sign out</string>

    <array name="item_list">
        <item name="user_tradeboard">TradeBoard</item>
        <item name="user_cart">My Cart</item>
        <item name="user_sold_items">Items Sold</item>
        <item name="user_items_tracked">Track \'Em</item>
        <item name="user_following">Following</item>
        <item name="user_purchase_history">Purchase History</item>
        <item name="user_barter_circle">Barter Circle</item>
        <item name="user_trusted_traders">+Tray\'ders</item>
        <item name="user_profile">My Profile</item>
    </array>
    <array name="navdrawer_icons">
        <item name="ic_tradeboard">@drawable/ic_tradeboard</item>
        <item name="ic_cart">@drawable/ic_cart</item>
        <item name="ic_cash">@drawable/ic_banknote</item>
        <item name="ic_tag_tracking">@drawable/ic_tag_tracking</item>
        <item name="ic_following">@drawable/ic_following</item>
        <item name="ic_purchase_history">@drawable/ic_purchase_history</item>
        <item name="ic_barter_circle">@drawable/ic_barter_circle</item>
        <item name="ic_traders">@drawable/ic_traders</item>
    </array>

</resources>