<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/tumblr_plus"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_desc_label" />

        <TextView
            android:id="@+id/date_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="DateStamp" />

        <TextView
            android:id="@+id/item_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:text="@string/item_price_value" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="17dp"
            android:layout_toLeftOf="@+id/item_price_value"
            android:gravity="right"
            android:text="@string/item_price_text" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/item_description_label"
            android:text="@string/item_desciption" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_desc"
        android:focusable="false"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/croquet" />

</RelativeLayout>