<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="90dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="132dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/signUpUserNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/signUpEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signUpPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

</LinearLayout>